# mini-rag

./: pyproject.toml
notebooks/: rag_exp.ipynb
src/rag/: haystack-comps.py
